--- a/PROYECTO QUINTA ARMONIA/Properties/Resources.resx
+++ b/PROYECTO QUINTA ARMONIA/Properties/Resources.resx
@@ -223,6 +223,9 @@
   <data name="Recursos__1_-removebg-preview1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos__1_-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fondoModificar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fondoModificar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="datos1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\datos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -328,7 +331,7 @@
   <data name="Recursos2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fondoModificar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fondoModificar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Recursos5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
